feat(change-request): create and view as teacher
