# swagger-api-codegen/swagger.yaml
@@ -1770,7 +1770,7 @@ paths:
                   - $ref: '#/components/schemas/Result'
                   - properties:
                       data:
-                        $ref: '#/components/schemas/SessionListItemDto'
+                        $ref: '#/components/schemas/SessionDto'
                         nullable: true
                       success:
                         type: boolean
@@ -1778,6 +1778,46 @@ paths:
                         type: string
                         nullable: true
                         example: null
+      tags:
+        - sessions
+      security:
+        - accessToken: []
+  /sessions/{id}/change:
+    post:
+      operationId: createChangeRequest
+      summary: Create Change Request
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateChangeSessionRequestDto'
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/Result'
+                  - properties:
+                      data:
+                        $ref: '#/components/schemas/ChangeSessionRequestDto'
+                        nullable: true
+                      success:
+                        type: boolean
+                      message:
+                        type: string
+                        nullable: true
+                        example: null
+        '201':
+          description: ''
       tags:
         - sessions
       security:
@@ -2071,6 +2111,85 @@ paths:
         - teachers
       security:
         - accessToken: []
+  /change-session-requests:
+    post:
+      operationId: create
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateChangeSessionRequestDto'
+      responses:
+        '201':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: string
+    get:
+      operationId: findAll
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: string
+  /change-session-requests/{id}:
+    get:
+      operationId: findOne
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: string
+    patch:
+      operationId: update
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateChangeSessionRequestDto'
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: string
+    delete:
+      operationId: remove
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: string
 info:
   title: ''
   description: ''
@@ -2464,11 +2583,40 @@ components:
           type: string
         endAt:
           type: string
+        changeSessionRequests:
+          type: array
+          items:
+            $ref: '#/components/schemas/ChangeSessionRequestDto'
       required:
         - id
         - courseClass
         - startAt
         - endAt
+        - changeSessionRequests
+    ChangeSessionRequestDto:
+      type: object
+      properties:
+        session:
+          $ref: '#/components/schemas/SessionListItemDto'
+        status:
+          type: string
+        substituteTeacher:
+          $ref: '#/components/schemas/TeacherSimpleDto'
+        oldStartAt:
+          type: string
+        oldEndAt:
+          type: string
+        newStartAt:
+          type: string
+        newEndAt:
+          type: string
+      required:
+        - session
+        - status
+        - oldStartAt
+        - oldEndAt
+        - newStartAt
+        - newEndAt
     UpdateCourseClassStudentsListDto:
       type: object
       properties:
@@ -2705,6 +2853,41 @@ components:
         - id
         - academicYear
         - scores
+    SessionDto:
+      type: object
+      properties:
+        id:
+          type: string
+        courseClass:
+          $ref: '#/components/schemas/CourseClassListItemDto'
+        startAt:
+          type: string
+        endAt:
+          type: string
+        substituteTeacher:
+          $ref: '#/components/schemas/TeacherSimpleDto'
+        changeSessionRequests:
+          type: array
+          items:
+            $ref: '#/components/schemas/ChangeSessionRequestDto'
+      required:
+        - id
+        - courseClass
+        - startAt
+        - endAt
+        - changeSessionRequests
+    CreateChangeSessionRequestDto:
+      type: object
+      properties:
+        startAt:
+          type: string
+        endAt:
+          type: string
+        substituteTeacherId:
+          type: string
+      required:
+        - startAt
+        - endAt
     StudentDto:
       type: object
       properties:
@@ -2737,3 +2920,12 @@ components:
         - teacherId
         - profile
         - courseClasses
+    UpdateChangeSessionRequestDto:
+      type: object
+      properties:
+        startAt:
+          type: string
+        endAt:
+          type: string
+        substituteTeacherId:
+          type: string
